# ToyCompiler

./: README.md
toycompiler/: .gitignore  CMakeLists.txt
toycompiler/src/: ast.h  codegen.cpp  codegen.h  lexer.cpp  lexer.h  main.cpp  optimizer.cpp  optimizer.h  parser.cpp  parser.h  sema.cpp  sema.h
toycompiler/tests/: constfold.toy  fib.toy
